@@ -1,3 +1,7 @@
+18 April 2008
++ Added search textfield to slot screen.
++ updated : templates/slot_setup.tpl
+
 10 April 2008
 + Restricted users cannot create signup sheets.
 
